[gd_scene load_steps=2 format=3 uid="uid://bhurh6h2vlnb2"]

[ext_resource type="Script" path="res://addons/w4gd/plugin/editor/w4_editor_database.gd" id="1_cv3uf"]

[node name="Database" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cv3uf")

[node name="Run" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="Run"]
layout_mode = 2
text = "Run Database Script"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Run"]
layout_mode = 2

[node name="ScriptPickerButton" type="Button" parent="Run/HBoxContainer"]
layout_mode = 2

[node name="ScriptLineEdit" type="LineEdit" parent="Run/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "res://backend/scripts/create_db.gd"

[node name="RunButton" type="Button" parent="Run/HBoxContainer"]
layout_mode = 2
text = "Run"

[node name="ScriptPicker" type="FileDialog" parent="."]
title = "Open a File"
size = Vector2i(362, 158)
ok_button_text = "Ouvrir"
file_mode = 0
access = 2
filters = PackedStringArray("*.gd")

[node name="RunConfirm" type="ConfirmationDialog" parent="."]
title = "Run Script"
position = Vector2i(0, 36)
size = Vector2i(200, 118)
ok_button_text = "Run"

[node name="VBoxContainer" type="VBoxContainer" parent="RunConfirm"]
offset_left = 4.0
offset_top = 4.0
offset_right = 196.0
offset_bottom = 76.0

[node name="RunConfirmDetails" type="Label" parent="RunConfirm/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1

[node name="ErrorDialog" type="AcceptDialog" parent="."]
size = Vector2i(416, 287)
popup_window = true
dialog_autowrap = true

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="Run/HBoxContainer/ScriptPickerButton" to="." method="_pick_file"]
[connection signal="pressed" from="Run/HBoxContainer/RunButton" to="." method="_on_run_button_pressed"]
[connection signal="file_selected" from="ScriptPicker" to="." method="_on_script_picker_file_selected"]
[connection signal="confirmed" from="RunConfirm" to="." method="_on_run_confirmed"]
